--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+Abg==2.3.1
+deep-translator
+pyromod
+openai
 aiofiles
 aiohttp
+pymongo
 asyncio
 beautifulsoup4
 dnspython
@@ -7,22 +12,33 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-motor
-numpy
-opencv-python
+httpx==0.27.2
+lyricsgenius
+motor==2.5.0
+wget
 pillow==9.5.0
+pymongo==3.12.0
 psutil
-py-tgcalls==0.9.7
+pytube
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+unidecode
+pyromod
+py-tgcalls==1.2.9
+ntgcalls==1.1.2
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
-unidecode
+urllib3
 uvloop
-yt-dlp
-youtube-search
-youtube-search-python
+pyrogram 
+flask
+gunicorn==20.1.0
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
+git+https://github.com/yt-dlp/yt-dlp
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+#git+https://github.com/THE-VIP-BOY-OP/yt-dlp-youtube-oauth2
+#git+https://github.com/Vivekkumar-IN/yt-dlp-youtube-oauth2
